--- a/taskhouse.html
+++ b/taskhouse.html
@@ -620,11 +620,11 @@
                 </div>
 
                 <div class="attendance-actions">
-                    <button id="clockInBtn" class="clock-btn clock-in">
+                    <button type="button" id="clockInBtn" class="clock-btn clock-in" onclick="clockIn()">
                         <i class="fas fa-sign-in-alt"></i>
                         Clock In
                     </button>
-                    <button id="clockOutBtn" class="clock-btn clock-out">
+                    <button type="button" id="clockOutBtn" class="clock-btn clock-out" onclick="clockOut()" disabled>
                         <i class="fas fa-sign-out-alt"></i>
                         Clock Out
                     </button>
