--- a/taskhouse.html
+++ b/taskhouse.html
@@ -517,20 +517,63 @@
         </div>
     </div>
 
-    <div class="delete-modal" id="deleteModal">
-        <div class="delete-modal-content">
-            <div class="delete-modal-header">
+    <!-- Delete Modal -->
+    <div class="modal" id="deleteModal">
+        <div class="modal-content">
+            <div class="modal-header">
                 <h2>Delete Task</h2>
-                <span class="close-delete-modal">&times;</span>
+                <button class="close-modal" onclick="hideDeleteModal()">×</button>
             </div>
-            <div class="delete-modal-body">
-                <i class="fas fa-exclamation-circle warning-icon"></i>
+            <div class="modal-body">
                 <p>Are you sure you want to delete this task?</p>
-                <p class="task-to-delete"></p>
             </div>
-            <div class="delete-modal-footer">
-                <button class="btn-cancel-delete">Cancel</button>
-                <button class="btn-confirm-delete">Delete</button>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" onclick="hideDeleteModal()">Cancel</button>
+                <button class="btn btn-danger" onclick="confirmDelete()">Delete</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Update Modal -->
+    <div class="modal" id="updateModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Update Task</h2>
+                <button class="close-modal" onclick="hideUpdateModal()">×</button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="updateTitle">Title</label>
+                    <input type="text" id="updateTitle" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="updateDescription">Description</label>
+                    <textarea id="updateDescription" class="form-control"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="updateDueDate">Due Date</label>
+                    <input type="date" id="updateDueDate" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="updatePriority">Priority</label>
+                    <select id="updatePriority" class="form-control">
+                        <option value="low">Low</option>
+                        <option value="medium">Medium</option>
+                        <option value="high">High</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="updateStatus">Status</label>
+                    <select id="updateStatus" class="form-control">
+                        <option value="not-started">Not Started</option>
+                        <option value="in-progress">In Progress</option>
+                        <option value="completed">Completed</option>
+                    </select>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" onclick="hideUpdateModal()">Cancel</button>
+                <button class="btn btn-primary" onclick="updateTask()">Update</button>
             </div>
         </div>
     </div>
